# deepmech

./: .gitignore  CNAME  LICENSE  README.md  index.html  manifest.json  package-lock.json  package.json  proof_of_concept.ipynb  requirements.txt  server.py  site.webmanifest  sw.js  webpack.common.js  webpack.config.js  webpack.dev.js  webpack.prod.js
.devcontainer/: DOCKERFILE  devcontainer.json  texlive.profile
data/: README.md
models/: README.md  symbol_classifier.h5
models/devel/: crop_detector.h5  iftomm_dach_constraint_detector.h5  iftomm_dach_node_detector.h5  iftomm_dach_node_detector_fcn.h5  sep_yolo.h5  sep_yolo2.h5  sep_yolo3.h5  srp5.h5  srp61.h5  srp64.h5  srp641.h5
models/symbol_classifier/: first_model_cnn_pooling.h5  first_model_data_augmentation.h5  first_model_feature_reduction.h5  group1-shard1of1.bin.txt  model.min.h5  sc_without_strides_but_maxpooling.h5  symbol_classifier.h5
notebooks/: 0.0-kl-proof_of_concept.ipynb  1.0-kl-first_model.ipynb  1.1-kl-hyperparam_determination.ipynb  1.2-kl-hyperparam_testing.ipynb
public/: index.html  manifest.json
public/libs/: mec2.html.js  model.js
reports/iftomm_dach/: document.bib  document.tex  packages.sty
reports/sep/: README.md  document.bib  document.sty  document.tex
src/: App.css  App.js  App.tsx  DeepmechUI.js  LeftDrawer.js  MecControl.js  RightDrawer.js  deepmech.js  get_directories.py  image_handling.py  index.js  index.tsx  mec.deepmech.js  models.js  spot.py  style.js  training_env.py  utils.py
src/Services/: g2.ts  (+3 more)
src/cc/: .gitignore  CMakeLists.txt
src/cc/src/: deepmech.cpp
(+426 files in other folders)
